--- a/Ch20---JSON/20.1.1JSON对象.htm
+++ b/Ch20---JSON/20.1.1JSON对象.htm
@@ -16,7 +16,9 @@
                    };
 
         // ECMAScript5对解析JSON的行为进行了规范，定义了全局对象 JSON；
-        // JSON 对象有两个方法： 1) stringfy() 把JavaScript 对象序列化为JSON 字符串； 2） parse() 把 JSON 字符串解析为原生的JavaScript 值；                   
+        // JSON 对象有两个方法： 
+        // 1) stringfy() 把JavaScript 对象序列化为JSON 字符串； 
+        // 2） parse() 把 JSON 字符串解析为原生的JavaScript 值；                   
         var jsonText = JSON.stringify(book);
         console.log(jsonText);
         
